docs/tests/parser/edge_cases/valid/ArrayOfFuncPtrs.src
fn void test() {
    let fp void(int) callbacks[10];
}
