docs/tests/parser/edge_cases/invalid/StrayKeyword.src
fn void test() {
    let int x = elif;
}
